<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mensa Potsdam</string>
    <string name="pick_date">Choose date</string>
    <string name="quit">Quit</string>
    <string name="last">previous</string>
    <string name="next">next</string>
    <string name="refresh">Reload</string>
    <string name="dialogOK">Okay</string>
    <string name="error">An error occurred! </string>
    <string name="no_menu">No menu available. Try another date. </string>
    <string name="preferences">Preferences</string>
    <string name="settings_title">Settings for Mensa Potsdam</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="tomorrow">tomorrow</string>
    <string name="app_description">Nice Android appllication which fetches a RSS feed and shows the menu for a given date. Simple, easy, beautiful. </string>
    <string name="fetched_successfully">Successfully fetched menu from %s</string>
	<string name="title_url_preferences">URL of canteen feed</string>
	<string name="summary_url_preferences">URL of canteen feed. This should be a RSS Feed, formatted with XML. </string>
	<string name="choosemensa">Choose your canteen</string>
	<string name="summary_choosemensa">Choose the canteen from the Studentenwerk Potsdam, where you shall dine.</string>
	<string name="diag_title_url_preferences">Type your preferred URL</string>
	<string name="app_version_name">1.3.11</string>
	<string name="about">About</string>
	<string name="author">Author</string>
	<string name="source_settings">Source Preferences</string>
	<string name="fetching_desc">Please wait...</string>
	<string name="fetching">Fetching Menu</string>
	<string name="alternative">Alternative:</string>
	<string name="menu">Menu %s:</string>
	<string name="feedback_desc">Write me a short email and ask a question, thank me or complain. </string>
	<string name="debug">Debug</string>
	<string name="debugging_desc">Should debugging be enabled?</string>
	<string name="canteen">Menu for canteen %s:</string>
	<string name="noconnection">No internet connection. Please connect!</string>
</resources>
